--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,18 +20,12 @@ jobs:
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2.0.1
 
-      - name: List root directory contents
-        run: |
-          echo "Listing contents of root directory:"
-          ls -al
-
-      - name: List all directory contents
-        run: |
-          echo "Listing all contents recursively:"
-          ls -R
-
       - name: Install Express
-        run: bun install express
+        run: |
+          cd progressBarMaker
+          bun install express
         
       - name: Run code
-        run: bun /progressBarMaker/server.ts
+        run: |
+          cd progressBarMaker
+          bun server.ts
