--- a/progressBarMaker-svelte/package.json
+++ b/progressBarMaker-svelte/package.json
@@ -18,5 +18,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"canvas": "^2.11.2",
+		"jsdom": "^24.1.1"
+	}
 }
